--- a/src/styleSheets/themeGuide.less
+++ b/src/styleSheets/themeGuide.less
@@ -155,3 +155,6 @@
   background-color: @translucent-white;
   box-shadow: @spread-shadow;
 }
+::-webkit-scrollbar {
+    display: none;
+}
